--- a/app/css/style.css
+++ b/app/css/style.css
@@ -734,6 +734,8 @@ img {
   line-height: 1.2; }
   .title_main {
     font-size: 48px; }
+  .title_big {
+    font-size: 40px; }
   .title_sec {
     font-size: 32px; }
   .title_small {
@@ -1472,6 +1474,173 @@ i {
 .blog-el__title {
   margin-bottom: 16px; }
 
+.blog-el .article-el__body {
+  padding-right: 0; }
+
+.crumbs_margin {
+  margin-bottom: 16px; }
+
+.crumbs__el {
+  display: inline;
+  margin-right: -3px; }
+
+.crumbs__text {
+  display: inline;
+  font-family: 'Roboto';
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 0.05em;
+  color: #767676; }
+
+.crumbs__active {
+  color: #18325E;
+  font-weight: bold; }
+
+.wrap-blog {
+  font-size: 18px;
+  color: #252526;
+  line-height: 1.6;
+  font-family: 'Roboto'; }
+  .wrap-blog h1, .wrap-blog h2, .wrap-blog h3, .wrap-blog h4, .wrap-blog h5, .wrap-blog h6 {
+    font-family: 'PT Serif';
+    font-weight: bold;
+    color: #252526; }
+  .wrap-blog h1, .wrap-blog h2, .wrap-blog h3, .wrap-blog h4, .wrap-blog h5 {
+    font-size: 32px; }
+  .wrap-blog h6 {
+    font-family: 'Roboto';
+    font-size: 18px; }
+  .wrap-blog__date {
+    font-family: 'Roboto';
+    font-size: 14px;
+    letter-spacing: 0.05em;
+    color: #767676;
+    margin-top: 11px;
+    margin-bottom: 23px; }
+  .wrap-blog p, .wrap-blog li {
+    min-height: 9px;
+    font-family: 'Roboto';
+    font-size: 18px;
+    color: #252526;
+    line-height: 1.6; }
+  .wrap-blog strong {
+    font-weight: bold; }
+  .wrap-blog ul li {
+    position: relative;
+    padding-left: 27px; }
+    .wrap-blog ul li::after {
+      content: '';
+      position: absolute;
+      top: 10px;
+      left: 12px;
+      width: 3px;
+      height: 3px;
+      border-radius: 100%;
+      background-color: #252526; }
+
+.block-socials-2 {
+  display: flex;
+  align-items: center; }
+  .block-socials-2__el {
+    margin-right: 16px; }
+
+.link-article {
+  display: flex;
+  flex-direction: column; }
+  .link-article_right {
+    align-items: flex-end; }
+  .link-article__top {
+    display: flex;
+    align-items: center;
+    margin-bottom: 18px; }
+    .link-article__top-text {
+      font-family: 'Roboto';
+      font-weight: bold;
+      font-size: 16px;
+      color: #18325E;
+      margin: 0 5px; }
+  .link-article__title {
+    font-family: 'PT Serif';
+    font-weight: bold;
+    font-size: 24px;
+    color: #252526; }
+
+.info-el-2 {
+  display: flex;
+  background: #FAF9F9;
+  border-radius: 32px;
+  overflow: hidden; }
+  .info-el-2__img {
+    background: #FAF9F9;
+    border-radius: 32px;
+    max-width: 500px;
+    width: 100%;
+    min-height: 232px;
+    object-fit: cover; }
+  .info-el-2__body {
+    width: 100%;
+    padding: 31px 33px; }
+  .info-el-2__title {
+    font-family: 'Roboto';
+    font-weight: bold;
+    font-size: 18px;
+    color: #18325E;
+    margin-bottom: 17px; }
+
+.block-info-2__el {
+  margin-bottom: 30px; }
+
+.info-el-3 {
+  background: #FAF9F9;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+  border-radius: 32px;
+  padding: 36px 30px; }
+  .info-el-3__top {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px; }
+  .info-el-3__count {
+    font-family: 'EB Garamond';
+    font-weight: 500;
+    font-size: 24px;
+    color: #B39013;
+    width: 32px;
+    height: 32px;
+    border: 1px solid #B39013;
+    border-radius: 100%;
+    flex: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 17px; }
+  .info-el-3__title {
+    font-family: 'Roboto';
+    font-weight: bold;
+    font-size: 16px;
+    color: #18325E; }
+
+.block-info-3 {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -12px;
+  margin-right: -12px; }
+  .block-info-3__el {
+    width: 33.33333%;
+    padding: 0 12px;
+    margin-bottom: 24px; }
+    .block-info-3__el .info-el-3 {
+      height: 100%; }
+
+.block-partners {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-left: -20px;
+  margin-right: -20px; }
+  .block-partners__el {
+    padding: 0 20px;
+    width: 20%; }
+
 .noscroll {
   overflow: hidden; }
 
@@ -1759,6 +1928,21 @@ body {
     padding: 125px 0;
     padding-bottom: 84px; }
 
+.sec-header-info {
+  background: #FAF9F9; }
+  .sec-header-info__wrap {
+    padding: 30px 0;
+    padding-bottom: 40px; }
+  .sec-header-info__content {
+    margin-top: 78px;
+    text-align: center;
+    max-width: 950px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%; }
+  .sec-header-info__title {
+    margin-bottom: 29px; }
+
 .sec-services-page .container {
   z-index: 10; }
 
@@ -1859,6 +2043,15 @@ body {
   .sec-form_2 .block-form-2__btn {
     padding-left: 34px;
     padding-right: 34px; }
+  .sec-form_bg {
+    background: #FAF9F9; }
+    .sec-form_bg .sec-form__wrap {
+      padding: 56px 0;
+      padding-bottom: 52px;
+      max-width: 940px;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto; }
 
 .footer {
   background: #FAF9F9; }
@@ -2010,9 +2203,83 @@ body {
 .block-articles-top .article-el {
   margin-bottom: 21px; }
 
+.sec-blog__top {
+  margin-bottom: 47px; }
+
 .sec-blog__wrap {
   padding: 96px 0;
   padding-bottom: 117px; }
+
+.sec-blog_2 .sec-blog__wrap {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1144px;
+  width: 100%; }
+
+.sec-article__wrap {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1144px;
+  width: 100%;
+  padding: 10px 0;
+  padding-bottom: 132px; }
+
+.sec-article__img {
+  background: #18325E;
+  border-radius: 32px; }
+
+.sec-article__content {
+  margin-top: 21px; }
+
+.sec-article__bottom {
+  margin-top: 26px;
+  display: flex;
+  align-items: center; }
+
+.sec-article__copy {
+  max-width: 208px;
+  width: 100%;
+  margin-right: 32px; }
+
+.sec-article__links {
+  margin-top: 81px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+
+.sec-info-2__wrap {
+  padding: 40px 0;
+  padding-bottom: 60px; }
+
+.sec-info-2__content {
+  max-width: 1144px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 49px; }
+
+.sec-info-3__wrap {
+  padding: 7px 0; }
+
+.sec-info-3__top {
+  max-width: 1144px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%; }
+  .sec-info-3__top p {
+    line-height: 1.75; }
+
+.sec-info-3__title {
+  margin-bottom: 14px; }
+
+.sec-info-3__content {
+  margin-top: 34px; }
+
+.sec-partners__wrap {
+  padding: 95px 0; }
+
+.sec-partners__content {
+  margin-top: 47px; }
 
 @media screen and (max-width: 1300px) {
   .container {
@@ -2020,7 +2287,13 @@ body {
   .sec-reviews__wrap {
     padding-top: 80px; }
   .sec-articles__wrap {
-    padding: 50px 0; } }
+    padding: 50px 0; }
+  .block-blog__el {
+    width: 33.333333%; }
+  .sec-blog__wrap {
+    padding: 60px 0; }
+  .sec-partners__wrap {
+    padding: 40px 0; } }
 
 @media screen and (max-width: 1000px) {
   .container {
@@ -2076,7 +2349,20 @@ body {
   .sec-options__wrap {
     padding-top: 40px; }
   .sec-facts__wrap {
-    padding-top: 50px; } }
+    padding-top: 50px; }
+  .block-articles-top__content {
+    display: block; }
+  .block-articles-top__right {
+    margin-left: auto;
+    margin-right: auto; }
+  .block-blog__el {
+    width: 50%; }
+  .info-el-2__img {
+    max-width: 300px; }
+  .block-info-3__el {
+    width: 50%; }
+  .block-partners__el {
+    width: 25%; } }
 
 @media screen and (max-width: 768px) {
   .container {
@@ -2146,7 +2432,25 @@ body {
     overflow-x: hidden; }
   .sec-header-page_2 .sec-header-page__wrap {
     padding-bottom: 75px;
-    padding-top: 40px; } }
+    padding-top: 40px; }
+  .block-articles-top__right {
+    width: 100%; }
+    .block-articles-top__right .article-el__img {
+      display: none; }
+    .block-articles-top__right .article-el__body {
+      margin: 0;
+      padding: 0; }
+  .info-el-2__img {
+    max-width: 200px; }
+  .sec-info-2__wrap {
+    padding-bottom: 0; }
+  .block-partners {
+    flex-wrap: wrap;
+    justify-content: flex-start; }
+  .block-partners__el {
+    width: 33.33333%;
+    text-align: center;
+    margin-bottom: 10px; } }
 
 @media screen and (max-width: 600px) {
   .top-menu {
@@ -2527,7 +2831,7 @@ body {
       width: 100%;
       margin: 0;
       max-width: 100%;
-      margin-bottom: 14px; }
+      margin-bottom: 10px; }
     .block-descrp_black .descrp-el {
       display: flex;
       text-align: left; }
@@ -2726,7 +3030,174 @@ body {
     padding: 16px 24px;
     padding-bottom: 33px; }
   .sec-header-page {
-    min-height: 0; } }
+    min-height: 0; }
+  .links-menu__link {
+    font-size: 14px; }
+  .block-links-top__wrap {
+    padding: 25px 0;
+    padding-bottom: 20px; }
+  .block-articles-top__wrap {
+    padding: 0;
+    padding-bottom: 30px; }
+  .article-el_big__title {
+    font-size: 20px; }
+  .article-el__body {
+    padding: 0; }
+  .article-el_big__body {
+    margin-top: 14px; }
+  .article-el__date {
+    margin-top: 15px; }
+  .block-articles-top .article-el {
+    margin-bottom: 25px; }
+    .block-articles-top .article-el:last-child {
+      margin-bottom: 0; }
+  .block-articles-top__left {
+    margin-bottom: 25px; }
+  .sec-blog__wrap {
+    padding: 33px 0; }
+  .block-blog__el {
+    width: 100%; }
+  .blog-el__img {
+    height: 328px; }
+  .blog-el__title {
+    margin-bottom: 6px; }
+  .crumbs__text {
+    font-size: 14px; }
+  .crumbs__active {
+    font-weight: 400; }
+  .crumbs__el {
+    display: none; }
+    .crumbs__el:first-child {
+      display: block; }
+    .crumbs__el .crumbs__link {
+      padding-left: 11px;
+      letter-spacing: 0.03em;
+      position: relative; }
+      .crumbs__el .crumbs__link::after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: -3px;
+        width: 10px;
+        height: 10px;
+        background: url("../img/icons/arr.svg") no-repeat center/contain; }
+  .sec-article__wrap {
+    padding: 20px 0; }
+  .crumbs_margin {
+    margin-bottom: 12px; }
+  .sec-article__img {
+    width: 100%;
+    height: 208px;
+    object-fit: cover;
+    object-position: top; }
+  .wrap-blog h1, .wrap-blog h2, .wrap-blog h3, .wrap-blog h4, .wrap-blog h5 {
+    font-size: 20px; }
+  .sec-article__content {
+    margin-top: 13px; }
+  .wrap-blog__date {
+    margin-top: 7px; }
+  .wrap-blog p, .wrap-blog li {
+    font-size: 16px; }
+  .wrap-blog__date {
+    margin-bottom: 10px; }
+  .wrap-blog p, .wrap-blog li {
+    line-height: 1.5; }
+  .wrap-blog h6 {
+    font-size: 16px; }
+  .sec-article__bottom {
+    display: block; }
+  .sec-article__copy {
+    max-width: 100%;
+    margin: 0;
+    margin-bottom: 32px; }
+  .sec-article__links {
+    display: block; }
+  .sec-article__links {
+    margin-top: 48px; }
+  .link-article__title {
+    font-size: 20px; }
+  .link-article__top {
+    margin-bottom: 12px; }
+  .sec-article__links-el {
+    margin-bottom: 30px; }
+  .sec-article__wrap {
+    padding-bottom: 62px; }
+  .sec-blog__wrap {
+    padding: 45px 0; }
+  .sec-blog__top {
+    margin-bottom: 31px; }
+  .sec-header-info__links {
+    overflow-x: auto;
+    justify-content: flex-start; }
+    .sec-header-info__links .links-menu__el {
+      flex: none;
+      margin-right: 16px;
+      margin-bottom: 20px; }
+    .sec-header-info__links .links-menu__link {
+      font-size: 16px; }
+  .title_big {
+    font-size: 32px; }
+  .sec-header-info__content {
+    margin-top: 24px; }
+  .sec-header-info__content .text-info-3 {
+    text-shadow: 0px 4px 16px rgba(255, 255, 255, 0.6);
+    font-size: 18px;
+    line-height: 1.36; }
+  .sec-header-info__title {
+    margin-bottom: 15px; }
+  .sec-header-info__wrap {
+    padding-bottom: 30px; }
+  .sec-info-2__wrap {
+    padding: 26px 0; }
+  .info-el-2 {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start; }
+    .info-el-2__img {
+      order: 1;
+      width: 100%;
+      max-width: 100%;
+      height: 160px;
+      border-radius: 0;
+      min-height: 0; }
+    .info-el-2__body {
+      order: 2; }
+  .sec-info-2__content {
+    margin-top: 27px; }
+  .info-el-2__body {
+    padding: 25px 16px;
+    padding-bottom: 56px; }
+  .block-info-2 .owl-dots {
+    position: absolute;
+    bottom: 5px;
+    left: 0;
+    width: 100%;
+    padding: 20px 0; }
+  .block-info-2 .block-info-2__el, .block-info-2 .info-el-2 {
+    height: 100%; }
+  .block-info-2 .owl-stage {
+    display: flex; }
+  .block-info-2__el {
+    margin-bottom: 0; }
+  .sec-info-2__wrap {
+    padding-bottom: 9px; }
+  .block-info-3__el {
+    width: 100%; }
+  .info-el-3 {
+    padding: 17px 18px; }
+  .info-el-3__top {
+    align-items: flex-start; }
+  .info-el-3__title {
+    line-height: 1.6; }
+  .info-el-3__top {
+    margin-bottom: 8px; }
+  .block-info-3__el {
+    margin-bottom: 17px; }
+  .sec-partners__wrap {
+    padding: 30px 0; }
+  .block-partners__el {
+    width: 50%; } }
 
 @media screen and (max-width: 359px) {
   .block-pwp__el {
