--- a/app/css/style.css
+++ b/app/css/style.css
@@ -669,6 +669,9 @@ img {
   font-size: 16px;
   color: #18325E; }
 
+.text-color {
+  color: #18325E !important; }
+
 .block-socials {
   display: flex; }
   .block-socials__el {
@@ -769,6 +772,8 @@ img {
   transition: .2s; }
   .btn:hover {
     box-shadow: 0px 6px 32px rgba(3, 14, 64, 0.4); }
+  .btn:active {
+    box-shadow: 0px 6px 32px rgba(3, 14, 64, 0.8); }
 
 .info-dec {
   display: flex;
@@ -840,6 +845,10 @@ img {
     top: 8px;
     font-size: 14px;
     color: #252526; }
+
+.textarea {
+  min-height: 80px;
+  max-height: 300px; }
 
 .block-form__el {
   margin-bottom: 17px; }
@@ -1198,6 +1207,8 @@ img {
     margin-top: 20px;
     padding: 18px 63px;
     min-width: 208px; }
+  .block-form-2__el {
+    margin-bottom: 20px; }
 
 i {
   font-style: italic; }
@@ -1215,6 +1226,8 @@ i {
   .wrap-article ul li {
     list-style: inside;
     margin-bottom: 3px; }
+  .wrap-article strong {
+    font-weight: bold; }
 
 .question-el {
   background: #FAF9F9;
@@ -1641,6 +1654,237 @@ i {
     padding: 0 20px;
     width: 20%; }
 
+.info-el-4 {
+  background: #FAF9F9;
+  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+  border-radius: 32px;
+  padding: 34px 30px; }
+  .info-el-4__top {
+    display: flex;
+    align-items: center;
+    margin-bottom: 9px; }
+  .info-el-4__count {
+    flex: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #B39013;
+    width: 32px;
+    height: 32px;
+    border-radius: 100%;
+    font-family: 'EB Garamond';
+    font-weight: 500;
+    font-size: 24px;
+    color: #B39013;
+    margin-right: 16px; }
+  .info-el-4__title {
+    font-family: 'Roboto';
+    font-weight: bold;
+    font-size: 16px;
+    color: #18325E; }
+
+.block-info-4 {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -12px;
+  margin-right: -12px; }
+  .block-info-4__el {
+    width: 33.333333%;
+    padding: 0 12px;
+    margin-bottom: 24px; }
+    .block-info-4__el .info-el-4 {
+      height: 100%; }
+
+.terms-el {
+  display: flex;
+  justify-content: space-between; }
+  .terms-el__img {
+    flex: none;
+    max-width: 500px;
+    background: #FAF9F9;
+    border-radius: 32px;
+    object-fit: cover;
+    object-position: center; }
+  .terms-el__body {
+    max-width: 650px; }
+    .terms-el__body p {
+      min-height: 29.7px; }
+
+.block-terms__el {
+  margin-bottom: 47px; }
+  .block-terms__el-title {
+    margin-bottom: 29px;
+    max-width: 650px; }
+    .block-terms__el-title_right {
+      margin-left: auto; }
+  .block-terms__el:last-child {
+    margin-bottom: 0; }
+
+.descrp-el-2 {
+  display: flex;
+  align-items: flex-start; }
+  .descrp-el-2__count {
+    width: 32px;
+    height: 32px;
+    border: 1px solid #B39013;
+    flex: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    font-family: 'EB Garamond';
+    font-weight: 500;
+    font-size: 24px;
+    color: #B39013;
+    margin-right: 8px; }
+  .descrp-el-2__text {
+    margin-top: 4px;
+    line-height: 1.7; }
+
+.block-descrp-2__title {
+  margin-bottom: 13px; }
+
+.block-descrp-2 .descrp-el-2 {
+  margin-bottom: 8px; }
+
+.people-el {
+  background: #FAF9F9;
+  border-radius: 32px;
+  padding: 42px 44px;
+  padding-bottom: 57px;
+  display: flex; }
+  .people-el__img {
+    background: #C4C4C4;
+    width: 224px;
+    height: 224px;
+    flex: none;
+    border-radius: 100%;
+    margin-bottom: 28px; }
+  .people-el__left {
+    width: 224px;
+    max-width: 100%;
+    flex: none;
+    text-align: center;
+    margin-right: 56px; }
+  .people-el__name {
+    font-family: 'PT Serif';
+    font-weight: bold;
+    font-size: 24px;
+    color: #18325E;
+    margin-bottom: 18px; }
+  .people-el__who {
+    font-family: 'Roboto';
+    font-size: 18px;
+    letter-spacing: 0.03em;
+    color: #767676;
+    margin-bottom: 20px; }
+  .people-el__soc {
+    display: block;
+    margin-bottom: 27px; }
+  .people-el__right {
+    max-width: 721px; }
+    .people-el__right p {
+      line-height: 1.5; }
+  .people-el__title {
+    margin-bottom: 29px; }
+
+.team-el {
+  text-align: center; }
+  .team-el__img {
+    width: 180px;
+    height: 180px;
+    flex: none;
+    border-radius: 100%;
+    background-color: #EBE8E8;
+    margin-bottom: 22px; }
+  .team-el__name {
+    font-family: PT Serif;
+    font-weight: bold;
+    font-size: 20px;
+    color: #18325E;
+    margin-bottom: 10px; }
+  .team-el__who {
+    font-family: 'Roboto';
+    font-size: 18px;
+    color: #767676;
+    margin-bottom: 14px; }
+
+.block-team {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -20px;
+  margin-right: -20px;
+  margin-bottom: -48px; }
+  .block-team__el {
+    width: 25%;
+    padding: 0 20px;
+    margin-bottom: 48px; }
+
+.join-el {
+  display: flex;
+  align-items: flex-start; }
+  .join-el__icon {
+    flex: none;
+    width: 32px;
+    margin-right: 14px; }
+  .join-el__body {
+    margin-top: 3px; }
+  .join-el__title {
+    font-family: 'Roboto';
+    font-weight: bold;
+    font-size: 18px;
+    color: #18325E;
+    margin-bottom: 7px; }
+
+.block-join {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -15px;
+  margin-right: -15px; }
+  .block-join__el {
+    width: 33.33333%;
+    padding: 0 15px;
+    margin-bottom: 35px; }
+
+.block-contact {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Roboto'; }
+  .block-contact__el {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-bottom: 48px; }
+  .block-contact__bold {
+    font-family: 'Roboto';
+    font-weight: bold;
+    font-size: 18px;
+    color: #18325E;
+    line-height: 1.6; }
+  .block-contact__link {
+    font-family: 'Roboto';
+    font-size: 18px;
+    color: #18325E;
+    line-height: 1.6; }
+  .block-contact__gray {
+    color: #767676;
+    letter-spacing: 0.05em; }
+  .block-contact p {
+    min-height: 20px; }
+  .block-contact__title {
+    font-family: 'PT Serif';
+    margin-bottom: 13px; }
+  .block-contact__time {
+    font-family: 'Roboto';
+    font-size: 18px;
+    letter-spacing: 0.03em;
+    color: #252526;
+    line-height: 1.7; }
+
+strong {
+  font-weight: bold; }
+
 .noscroll {
   overflow: hidden; }
 
@@ -1943,6 +2187,28 @@ body {
   .sec-header-info__title {
     margin-bottom: 29px; }
 
+.sec-header-info-2 {
+  background: #FAF9F9; }
+  .sec-header-info-2__wrap {
+    padding: 32px 0;
+    padding-bottom: 65px; }
+  .sec-header-info-2__top {
+    margin-top: 66px;
+    text-align: center; }
+  .sec-header-info-2__content {
+    margin-top: 41px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start; }
+    .sec-header-info-2__content-img {
+      margin-right: 39px;
+      flex: none;
+      max-width: 500px; }
+  .sec-header-info-2__text {
+    margin-bottom: 23px; }
+  .sec-header-info-2__icon {
+    margin-top: 27px; }
+
 .sec-services-page .container {
   z-index: 10; }
 
@@ -2112,6 +2378,8 @@ body {
     padding: 42px 38px; }
   .sec-plan__content {
     margin-top: 20px; }
+  .sec-plan_padding {
+    padding-bottom: 74px; }
 
 .sec-questions__wrap {
   padding: 50px 0;
@@ -2280,6 +2548,139 @@ body {
 
 .sec-partners__content {
   margin-top: 47px; }
+
+.sec-info-4 {
+  background-color: #fff; }
+  .sec-info-4__wrap {
+    padding: 91px 0;
+    padding-bottom: 82px; }
+  .sec-info-4__content {
+    margin-top: 45px; }
+
+.sec-terms__wrap {
+  padding: 66px 0; }
+
+.sec-terms__content {
+  margin-top: 51px; }
+
+.sec-terms_2 {
+  margin-bottom: 51px; }
+  .sec-terms_2 .sec-terms__content {
+    margin-top: 25px; }
+
+.sec-header-info-3__wrap {
+  padding: 30px 0; }
+
+.sec-header-info-3__top {
+  text-align: center;
+  margin-top: 74px; }
+
+.sec-header-info-3__content {
+  margin-top: 42px;
+  max-width: 1144px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto; }
+
+.sec-header-info-3__text {
+  margin-bottom: 35px; }
+
+.sec-team {
+  background-color: #fff; }
+  .sec-team__wrap {
+    padding: 130px 0;
+    padding-bottom: 50px; }
+  .sec-team__content {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 983px;
+    margin-top: 52px; }
+  .sec-team_padding .sec-team__wrap {
+    padding-top: 32px; }
+
+.sec-join {
+  background-color: #fff; }
+  .sec-join__wrap {
+    padding: 59px 0; }
+  .sec-join__content {
+    margin-top: 60px; }
+
+.sec-jointeam__wrap {
+  padding: 40px 0;
+  padding-bottom: 132px; }
+
+.sec-jointeam__content {
+  position: relative;
+  background: #FAF9F9;
+  border-radius: 32px;
+  max-width: 870px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-top: -142px;
+  padding: 53px 20px;
+  padding-bottom: 32px; }
+
+.sec-jointeam__img {
+  width: 100%; }
+
+.sec-jointeam__title {
+  margin-bottom: 20px; }
+
+.sec-jointeam__btn {
+  font-weight: 400;
+  margin-top: 30px; }
+
+.sec-contact__wrap {
+  padding: 20px 0;
+  padding-bottom: 100px; }
+
+.sec-contact__img {
+  border-radius: 32px; }
+
+.sec-contact__content {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 108px; }
+  .sec-contact__content-body {
+    max-width: 314px;
+    width: 100%;
+    margin-left: 38px;
+    margin-top: 31px;
+    flex: none;
+    margin-right: 20px; }
+  .sec-contact__content-map {
+    height: 449px;
+    width: 100%;
+    max-width: 789px;
+    border-radius: 32px; }
+
+.sec-form-contact {
+  background-color: #fff; }
+  .sec-form-contact__wrap {
+    padding: 32px 0;
+    padding-bottom: 133px; }
+  .sec-form-contact__content {
+    background: #FAF9F9;
+    border-radius: 32px;
+    padding: 56px 56px; }
+  .sec-form-contact .block-form-2__img {
+    margin-right: 85px; }
+  .sec-form-contact .block-form-2__title {
+    margin-bottom: 26px; }
+  .sec-form-contact .block-form-2__content {
+    margin-top: 32px; }
+  .sec-form-contact .block-form-2__inputs-el {
+    margin-bottom: 17px; }
+  .sec-form-contact .block-form-2__btn {
+    padding-left: 10px;
+    padding-right: 10px;
+    max-height: 208px;
+    font-weight: normal;
+    font-size: 16px; }
 
 @media screen and (max-width: 1300px) {
   .container {
