--- a/app/sass/components/_components.scss
+++ b/app/sass/components/_components.scss
@@ -54,6 +54,10 @@
 	color: #18325E;
 }
 
+.text-color{
+	color: #18325E !important;
+}
+
 .block-socials{
 	display: flex;
 	&__el{
@@ -181,6 +185,9 @@
 	&:hover{
 		box-shadow: 0px 6px 32px rgba(3, 14, 64, 0.4);
 	}
+	&:active{
+		box-shadow: 0px 6px 32px rgba(3, 14, 64, 0.8);
+	}
 }
 
 .info-dec{
@@ -269,6 +276,11 @@
 			color: #252526;
 		}
 	}
+}
+
+.textarea{
+	min-height: 80px;
+	max-height: 300px;
 }
 
 .block-form{
@@ -718,6 +730,9 @@
 		padding: 18px 63px;
 		min-width: 208px;
 	}
+	&__el{
+		margin-bottom: 20px;
+	}
 }
 
 i{
@@ -741,6 +756,9 @@ i{
 	    	list-style: inside;
 	    	margin-bottom: 3px;
 	    }
+	}
+	strong{
+		font-weight: bold;
 	}
 }
 
@@ -1274,4 +1292,289 @@ i{
 		padding: 0 20px;
 		width: 20%;
 	}
+}
+
+.info-el-4{
+	background: #FAF9F9;
+	box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+	border-radius: 32px;
+	padding: 34px 30px;
+	&__top{
+		display: flex;
+		align-items: center;
+		margin-bottom: 9px;
+	}
+	&__count{
+		flex: none;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		border: 1px solid #B39013;
+		width: 32px;
+		height: 32px;
+		border-radius: 100%;
+		font-family: 'EB Garamond';
+		font-weight: 500;
+		font-size: 24px;
+		color: #B39013;
+		margin-right: 16px;
+	}
+	&__title{
+		font-family: 'Roboto';
+		font-weight: bold;
+		font-size: 16px;
+		color: #18325E;
+	}
+}
+
+.block-info-4{
+	display: flex;
+	flex-wrap: wrap;
+	margin-left: -12px;
+	margin-right: -12px;
+	&__el{
+		width: 33.333333%;
+		padding: 0 12px;
+		margin-bottom: 24px;
+		.info-el-4{
+			height: 100%;
+		}
+	}
+}
+
+.terms-el{
+	display: flex;
+	justify-content: space-between;
+	&__img{
+		flex: none;
+		max-width: 500px;
+		background: #FAF9F9;
+		border-radius: 32px;
+		object-fit: cover;
+		object-position: center;
+	}
+	&__body{
+		max-width: 650px;
+		p{
+		    min-height: 29.7px;
+		}
+	}
+}
+
+.block-terms{
+	&__el{
+		margin-bottom: 47px;
+		&-title{
+			margin-bottom: 29px;
+			max-width: 650px;
+			&_right{
+				margin-left: auto;
+			}
+		}
+		&:last-child{
+			margin-bottom: 0;
+		}
+	}
+}
+
+.descrp-el-2{
+	display: flex;
+	align-items: flex-start;
+	&__count{
+		width: 32px;
+		height: 32px;
+		border: 1px solid #B39013;
+		flex: none;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		border-radius: 100%;
+		font-family: 'EB Garamond';
+		font-weight: 500;
+		font-size: 24px;
+		color: #B39013;
+		margin-right: 8px;
+	}
+	&__text{
+		margin-top: 4px;
+		line-height: 1.7;
+	}
+}
+
+.block-descrp-2{
+	&__title{
+		margin-bottom: 13px;
+	}
+	.descrp-el-2{
+		margin-bottom: 8px;
+	}
+}
+
+.people-el{
+	background: #FAF9F9;
+	border-radius: 32px;
+	padding: 42px 44px;
+	padding-bottom: 57px;
+	display: flex;
+	&__img{
+		background: #C4C4C4;
+		width: 224px;
+		height: 224px;
+		flex: none;
+		border-radius: 100%;
+		margin-bottom: 28px;
+	}
+	&__left{
+		width: 224px;
+		max-width: 100%;
+		flex: none;
+		text-align: center;
+		margin-right: 56px;
+	}
+	&__name{
+		font-family: 'PT Serif';
+		font-weight: bold;
+		font-size: 24px;
+		color: #18325E;
+		margin-bottom: 18px;
+	}
+	&__who{
+		font-family: 'Roboto';
+		font-size: 18px;
+		letter-spacing: 0.03em;
+		color: #767676;
+		margin-bottom: 20px;
+	}
+	&__soc{
+		display: block;
+		margin-bottom: 27px;
+	}
+	&__right{
+		max-width: 721px;
+		p{
+		    line-height: 1.5;
+		}
+	}
+	&__title{
+		margin-bottom: 29px;
+	}
+}
+
+.team-el{
+	text-align: center;
+	&__img{
+		width: 180px;
+		height: 180px;
+		flex: none;
+		border-radius: 100%;
+		background-color: #EBE8E8;
+		margin-bottom: 22px;
+	}
+	&__name{
+		font-family: PT Serif;
+		font-weight: bold;
+		font-size: 20px;
+		color: #18325E;
+		margin-bottom: 10px;
+	}
+	&__who{
+		font-family: 'Roboto';
+		font-size: 18px;
+		color: #767676;
+		margin-bottom: 14px;
+	}
+}
+
+.block-team{
+	display: flex;
+	flex-wrap: wrap;
+	margin-left: -20px;
+	margin-right: -20px;
+	margin-bottom: -48px;
+	&__el{
+		width: 25%;
+		padding: 0 20px;
+		margin-bottom: 48px;
+	}
+}
+
+.join-el{
+	display: flex;
+	align-items: flex-start;
+	&__icon{
+		flex: none;
+		width: 32px;
+		margin-right: 14px;
+	}
+	&__body{
+		margin-top: 3px;
+	}
+	&__title{
+		font-family: 'Roboto';
+		font-weight: bold;
+		font-size: 18px;
+		color: #18325E;
+		margin-bottom: 7px;
+	}
+	
+}
+
+.block-join{
+	display: flex;
+	flex-wrap: wrap;
+	margin-left: -15px;
+	margin-right: -15px;
+	&__el{
+		width: 33.33333%;
+		padding: 0 15px;
+		margin-bottom: 35px;
+	}
+}
+
+.block-contact{
+	display: flex;
+	flex-direction: column;
+	font-family: 'Roboto';
+	&__el{
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		justify-content: flex-start;
+		margin-bottom: 48px;
+	}
+	&__bold{
+		font-family: 'Roboto';
+		font-weight: bold;
+		font-size: 18px;
+		color: #18325E;
+		line-height: 1.6;
+	}
+	&__link{
+		font-family: 'Roboto';
+		font-size: 18px;
+		color: #18325E;
+		line-height: 1.6;
+	}
+	&__gray{
+		color: #767676;
+		letter-spacing: 0.05em;
+	}
+	p{
+		min-height: 20px;
+	}
+	&__title{
+		font-family: 'PT Serif';
+		margin-bottom: 13px;
+	}
+	&__time{
+		font-family: 'Roboto';
+		font-size: 18px;
+		letter-spacing: 0.03em;
+		color: #252526;
+		line-height: 1.7;
+	}
+}
+
+strong{
+	font-weight: bold;
 }
