--- a/app/sass/components/_media.scss
+++ b/app/sass/components/_media.scss
@@ -1,6 +1,6 @@
 @media screen and (max-width: 1300px){
 	.container{
-		max-width: 991px;
+		// max-width: 991px;
 	}
 	.sec-reviews__wrap{
 		padding-top: 80px;
@@ -17,11 +17,23 @@
 	.sec-partners__wrap{
 		padding: 40px 0;
 	}
+	.sec-info-4__wrap{
+		padding: 40px 0;
+	}
+	.sec-plan_padding{
+		padding-bottom: 40px;
+	}
+	.terms-el__img{
+		max-width: 400px;
+	}
+	.terms-el__body {
+	    max-width: 514px;
+	}
 }
 
 @media screen and (max-width: 1000px){
 	.container{
-		max-width: 768px;
+		// max-width: 768px;
 	}
 	.block-work{
 		max-height: 800px;
@@ -58,7 +70,7 @@
 	.articles-el__img{
 		order: 1;
 		// width: 100%;
-		border-radius: 0;
+		// border-radius: 0;
 	}
 	.articles-el__body{
 		order: 2;
@@ -121,11 +133,72 @@
 	.block-partners__el{
 		width: 25%;
 	}
+
+	.sec-header-info-2__content{
+		display: block;
+	}
+	.sec-header-info-2__content-img{
+		margin: 0;
+		margin-bottom: 40px;
+	}
+	.block-info-4__el{
+		width: 50%;
+	}
+	.sec-terms__wrap{
+		padding: 30px 0;
+	}
+	.terms-el{
+		flex-direction: column;
+		&__img{
+			order: 1;
+			max-width: 100%;
+			margin: 0;
+			margin-bottom: 40px;
+			max-height: 400px;
+		}
+		&__body{
+			order: 2;
+		}
+	}
+
+	.sec-header-info-3__top{
+		margin-top: 40px;
+	}
+	.block-team__el{
+		width: 33.33333%;
+	}
+	.sec-team__wrap{
+		padding: 30px 0;
+	}
+	.sec-join__wrap{
+		padding-bottom: 30px;
+	}
+	.sec-jointeam__content{
+		margin: 0 auto;
+		max-width: 90%;
+		margin-top: -100px;
+	}
+	.sec-jointeam__wrap{
+		padding-bottom: 60px;
+	}
+
+	.sec-form-contact{
+		.block-form-2{
+			display: block;
+		}
+		.block-form-2__img{
+			margin: 0;
+			margin-bottom: 20px;
+		}
+	}
+	.sec-form-contact__wrap{
+		padding-bottom: 56px;
+	}
 }
 
 @media screen and (max-width: 768px){
 	.container{
-		max-width: 600px;
+		// max-width: 600px;
 	}
 	.links-menu__link{
 		white-space: nowrap;
@@ -157,7 +230,8 @@
 	}
 	.block-services__el{
 		width: 50%;
-		margin-bottom: 30px;
+		padding: 0 8px;
+		margin-bottom: 16px;
 	}
 	.block-work{
 		flex-direction: row;
@@ -264,6 +338,42 @@
 		text-align: center;
 		margin-bottom: 10px;
 	}
+
+	.people-el{
+		display: block;
+		padding: 40px 40px;
+	}
+	.people-el__left{
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 40px;
+	}
+	.block-team__el{
+		width: 50%;
+	}
+	.block-join__el{
+		width: 50%;
+	}
+	.sec-jointeam__content{
+		padding: 30px 20px;
+	}
+
+	.sec-contact__content-body{
+		margin: 0;
+	}
+	.sec-contact__content{
+		display: block;
+		margin-top: 24px;
+	}
+	.sec-contact__wrap{
+		padding-bottom: 40px;
+	}
+	.sec-form-contact__content{
+		padding: 0;
+		background-color: #fff;
+	}
+
+
 }
 
 @media screen and (max-width: 600px){
@@ -301,6 +411,7 @@
 		transition: .2s;
 		top: 100%;
 		max-height: 100vh;
+		min-height: 100vh;
 		overflow-y: auto;
 		&.active{
 			left: 0;
@@ -335,6 +446,7 @@
 			margin-top: 26px;
 			padding: 0 10px;
 			margin-bottom: 53px;
+			display: none;
 		}
 		.dropdown-menu-el__links a{
 			font-size: 18px;
@@ -361,6 +473,25 @@
 		    &:last-child{
 		    	margin-bottom: 0;
 		    }
+		}
+	}
+	.links-menu__link_title{
+		position: relative;
+		&::after{
+			content: '';
+			position: absolute;
+			top: 0;
+			right: 0;
+			background: url('../img/icons/arr.svg') no-repeat center / contain;
+			width: 15px;
+			height: 17.6px;
+			transform: rotate(180deg);
+			transition: .2s;
+		}
+	}
+	.links-menu__el.active{
+		.links-menu__link_title::after{
+			transform: rotate(-90deg);
 		}
 	}
 	.nav-menu__mob{
@@ -412,6 +543,7 @@
 	.sec-header__bottomInfo{
 		display: flex;
 		align-items: center;
+		justify-content: center;
 		.text-info{
 			font-size: 16px;
 		}
@@ -467,6 +599,24 @@
 		}
 		&__content{
 			padding: 0;
+		}
+	}
+	.sec-descrp__content{
+		position: relative;
+		&::after{
+			content: '';
+			position: absolute;
+			bottom: 0px;
+			left: 0;
+			width: 100%;
+			background: #FAF9F9;
+			height: 20px;
+			z-index: 10;
+		}
+	}
+	.sec-descrp_white{
+		.sec-descrp__content::after{
+			display: none;
 		}
 	}
 	.block-descrp{
@@ -547,7 +697,7 @@
 		// padding-bottom: 6px;
 		&__count{
 			position: absolute;
-		    top: 20px;
+		    top: 18px;
     		left: 17px;
 		}
 		&__title{
@@ -693,7 +843,10 @@
 		margin-top: 28px;
 	}
 	.block-articles__el{
-		margin-bottom: 17px;
+		margin-bottom: 0;
+	}
+	.articles-el__body{
+		padding-bottom: 40px;
 	}
 	.block-form-2__img{
 		margin: 0;
@@ -756,7 +909,7 @@
 		box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
 	}
 	.articles-el{
-		background: transparent;
+		background: #FAF9F9;
 		border-radius: 0;
 	}
 	.message-info{
@@ -1318,6 +1471,340 @@
 	}
 	.block-partners__el{
 		width: 50%;
+	}
+
+	.links-menu_2{
+		overflow-x: auto;
+		justify-content: flex-start;
+		.links-menu__el{
+			margin: 0;
+			margin-bottom: 30px;
+			margin-right: 16px;
+		}
+		.links-menu__link{
+			font-size: 16px;
+		}
+	}
+	.sec-header-info-2__top{
+		margin-top: 12px;
+	}
+	.sec-header-info-2__content-img{
+		max-width: 100%;
+	}
+	.sec-header-info-2__content{
+		margin-top: 33px;
+	}
+	.sec-header-info-2__content-img{
+		border-radius: 32px;
+		max-height: 269px;
+		width: 100%;
+		object-fit: cover;
+	}
+	.sec-header-info-2__content-img{
+		margin-bottom: 15px;
+	}
+	.sec-header-info-2__icon{
+		margin-top: 0;
+		max-width: 50px;
+	}
+	.sec-header-info-2__icon {
+	    margin-top: 4px;
+	    max-width: 73px;
+	}
+	.sec-header-info-2__wrap{
+		padding-bottom: 42px;
+	}
+	.block-info-4__el{
+		width: 100%;
+	}
+	.sec-info-4__content {
+	    margin-top: 26px;
+	}
+	.info-el-4{
+		padding: 16px 17px;
+	}
+	.block-info-4{
+		position: relative;
+		margin: 0;
+		.owl-stage{
+			display: flex;
+		}
+		.owl-item{
+			// height: 100%;
+			padding-bottom: 20px;
+		}
+		.block-info-4__el{
+			padding: 0;
+			margin: 0;
+			height: 100%;
+			margin-bottom: 50px;
+		}
+		.owl-dots{
+			position: absolute;
+			bottom: 28px;
+			left: 0;
+			width: 100%;
+			padding: 10px 0;
+		}
+	}
+	.info-el-4{
+		padding-bottom: 0;
+	}
+	.sec-info-4__wrap{
+		padding-bottom: 0;
+	}
+	.sec-plan_padding{
+		.sec-top{
+			text-align: left;
+		}
+		.sec-plan__content{
+			p:first-child:empty{
+				display: none;
+			}
+		}
+	}
+	.sec-plan__wrap {
+	    padding: 27px 17px;
+	}
+	.sec-terms__wrap{
+		padding: 18px 0;
+	}
+	.terms-el{
+		// display: block;
+	}
+	.sec-terms__content {
+	    margin-top: 18px;
+	}
+	.terms-el__img{
+		max-height: 173px;
+		width: 100%;
+	}
+	.block-terms__el{
+		margin-bottom: 16px;
+	}
+	.descrp-el-2__text{
+		margin-top: 0;
+	}
+	.sec-terms_2{
+		margin-bottom: 20px;
+	}
+
+	.sec-header-info-3__title{
+		font-size: 32px;
+	}
+	.sec-header-info-3__top {
+	    margin-top: 13px;
+	}
+	.sec-header-info-3__content{
+		margin-top: 15px;
+	}
+	.sec-header-info-3__text{
+		font-size: 18px;
+		line-height: 1.4;
+		margin-bottom: 20px;
+	}
+	.people-el__left{
+		max-width: 100%;
+		width: 100%;
+		text-align: left;
+		display: flex;
+	}
+	.people-el{
+		padding: 0 17px;
+		padding-top: 72px;
+		position: relative;
+	}
+	.people-el__title{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		text-align: center;
+		font-size: 24px;
+		margin: 0;
+		padding-top: 26px;
+	}
+	.people-el__img{
+		width: 120px;
+		height: 120px;
+	}
+	.people-el__name{
+		font-size: 18px;
+		margin-bottom: 9px;
+	}
+	.people-el__who{
+		font-size: 14px;
+	}
+	.people-el__left-body{
+		margin-left: 18px;
+		margin-top: 18px;
+	}
+	.people-el__soc{
+		margin-bottom: 20px;
+	}
+	.people-el__left{
+		margin-bottom: 32px;
+	}
+	.team-el__img{
+		width: 120px;
+		height: 120px;
+		margin-bottom: 19px;
+	}
+	.team-el__name{
+		font-size: 16px;
+	}
+	.team-el__who{
+		font-size: 14px;
+		margin-bottom: 6px;
+	}
+	.team-el__soc-icon{
+		max-width: 16px;
+	}
+	.title_small{
+		font-size: 24px;
+	}
+	.sec-team__content{
+		margin-top: 34px;
+	}
+	.team-el__name{
+		margin-bottom: 3px;
+	}
+	.team-el__who{
+		line-height: 1.5;
+	}
+	.block-team__el{
+		margin-bottom: 24px;
+	}
+	.block-team{
+		margin-bottom: -24px;
+	}
+	.sec-join__content{
+		margin-top: 32px;
+	}
+	.block-join__el{
+		width: 100%;
+	}
+	.join-el__title{
+		font-size: 16px;
+	}
+	.join-el__title{
+		margin-bottom: 4px;
+	}
+	.block-join__el{
+		margin-bottom: 16px;
+	}
+	.sec-jointeam__content{
+		margin: 0;
+		max-width: 100%;
+	}
+	.sec-jointeam__img{
+		border-radius: 32px 32px 0px 0px;
+	}
+	.sec-jointeam__content{
+		padding: 24px 16px;
+	}
+	.sec-jointeam__title{
+		margin-bottom: 16px;
+	}
+	.sec-jointeam__btn{
+		margin-top: 16px;
+	}
+	.sec-jointeam__wrap{
+		padding-bottom: 56px;
+	}
+	.sec-join__wrap{
+		padding: 20px 0;
+	}
+	.sec-team_padding .sec-team__wrap{
+		padding-top: 0;
+	}
+
+	.sec-header-info-3__wrap{
+		padding-bottom: 0;
+	}
+	.sec-contact__wrap{
+		padding: 24px 0;
+	}
+	.sec-contact__img{
+		height: 225px;
+		object-fit: cover;
+	}
+	.block-contact__bold{
+		font-size: 16px;
+	}
+	.block-contact__link{
+		font-size: 16px;
+	}
+	.block-contact__el{
+		p{
+			min-height: 10px;
+		}
+	}
+	.block-contact__el{
+		margin-bottom: 26px;
+	}
+	.block-contact__time{
+		font-size: 16px;
+	}
+	.block-contact__title{
+		margin-bottom: 3px;
+	}
+	.sec-contact__content-map{
+		height: 186px;
+		width: 100%;
+		max-width: 100%;
+	}
+	.sec-form-contact{
+		.block-form-2__img{
+			margin: 0;
+			width: 100%;
+			max-width: 100%;
+			height: 224px;
+			object-fit: cover;
+			border-radius: 32px;
+		}
+	}
+	.sec-form-contact__wrap{
+		padding: 63px 0;
+	}
+	.block-form-2__body{
+		margin-top: 20px;
+	}
+	.sec-form-contact .block-form-2__title {
+	    margin-bottom: 17px;
+	}
+	.sec-form-contact .block-form-2__content {
+	    margin-top: 16px;
+	}
+
+	.articles-el__body-img{
+		position: static;
+		margin-bottom: 15px;
+	}
+	.articles-el__text{
+		// padding-bottom: 70px;
+	}
+	.articles-el__title{
+		margin-bottom: 15px;
+	}
+
+	.sec-facts__content{
+		position: relative;
+		&::after{
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			height: 10px;
+			width: 100%;
+			background-color: #fff;
+		}
+	}
+	.work-el__title{
+		font-size: 18px;
+	}
+	.links-menu__dropdown{
+
 	}
 }
 
