--- a/app/sass/components/_components.scss
+++ b/app/sass/components/_components.scss
@@ -429,12 +429,12 @@
 .block-services{
 	display: flex;
 	flex-wrap: wrap;
-	margin-left: -10px;
-	margin-right: -10px;
+	margin-left: -12px;
+	margin-right: -12px;
 	&__el{
-		padding: 0 10px;
+		padding: 0 12px;
 		width: 33.3333%;
-		margin-bottom: 19px;
+		margin-bottom: 24px;
 		.services-el{
 			height: 100%;
 		}
@@ -555,6 +555,13 @@
 		}
 		&.owl-next{
 			right: 0;
+		}
+		svg{
+			border-radius: 100%;
+			transition: .2s;
+			&:hover{
+				box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
+			}
 		}
 	}
 }
